Work on moving product management to settings